<?xml version="1.0"?>
<package format="2">
  <name>fast_tf</name>
  <version>0.0.0</version>
  <description>A drop-in replacement for the tf2 library</description>

  <maintainer email="dmitrij.dorezyuk@hotmail.de">Dima Dorezyuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_eigen</depend>

  <test_depend>rostest</test_depend>
</package>
